# node-mlx

./: .gitignore  .gitmodules  .npmignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.d.ts  index.js  install.js  node_mlx.node.d.ts  package.json  tsconfig.json
.github/workflows/: build.yml  post-release.yml
lib/: core.ts  index.d.ts  index.js  index.ts  stream.ts  utils.ts
lib/nn/: index.ts  init.ts  losses.ts  utils.ts
lib/nn/layers/: activations.ts  base.ts  containers.ts  convolution-transpose.ts  convolution.ts  dropout.ts  embedding.ts  index.ts  linear.ts  normalization.ts  pooling.ts  positional-encoding.ts  pytools.ts  quantized.ts  recurrent.ts  transformer.ts  upsample.ts
lib/optimizers/: index.ts  optimizers.ts  schedulers.ts
src/: array.cc  array.h  bindings.cc  bindings.h  complex.cc  complex.h  constants.cc  device.cc  device.h  fast.cc  fft.cc  indexing.cc  indexing.h  io.cc  linalg.cc  memory.cc  metal.cc  ops.cc  ops.h  random.cc  stream.cc  stream.h  transforms.cc  trees.cc  trees.h  util.h  utils.cc  utils.h
tests/: array.spec.ts  autograd.spec.ts  compile.spec.ts  eval.spec.ts  fast.spec.ts  fft.spec.ts  init.spec.ts  js.spec.ts  linalg.spec.ts  losses.spec.ts  memory.spec.ts  metal.spec.ts  nn.spec.ts  ops.spec.ts  optimizers.spec.ts  prompt_test_py_to_js.txt  random.spec.ts  run.ts  tree.spec.ts  tsconfig.json  utils.ts  vmap.spec.ts
